fixed alignment on AddListing and EditListing forms

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@ button {
   border: 1px solid #3f3f37;
   font-size: 14px;
   padding: 3%;
+  margin: 5px;
+  background-color: #e69510;
 }
 
 .content{
